SFDC-Twillio-Integration/force-app/main/default/objects/TwilioConfig__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <description>base endpoint for  the twilio API.  For example, https://api.twilio.com</description>
    <inlineHelpText>base endpoint for  the twilio API.  For example, https://api.twilio.com</inlineHelpText>
    <label>API Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>