SFDC-Twillio-Integration/force-app/main/default/objects/TwilioConfig__c/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <description>API version--used to build the endpoint.  they look like dates lately.  For example, &apos;2010-04-01&apos; is a version.</description>
    <inlineHelpText>API version--used to build the endpoint.  they look like dates lately.  For example, &apos;2010-04-01&apos; is a version.</inlineHelpText>
    <label>API Version</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>