SFDC-Twillio-Integration/force-app/main/default/objects/TwilioConfig__c/fields/Twilio_Number__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Number__c</fullName>
    <description>the phone number assigned by Twilio for your use</description>
    <inlineHelpText>the phone number assigned by Twilio for your use</inlineHelpText>
    <label>Twilio Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>