SFDC-Twillio-Integration/force-app/main/default/objects/TwilioConfig__c/fields/Twilio_Version__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Version__c</fullName>
    <description>major version, like 3.2.0</description>
    <inlineHelpText>major version, like 3.2.0</inlineHelpText>
    <label>Twilio Version</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>